--- a/voting/style.css
+++ b/voting/style.css
@@ -276,6 +276,57 @@ input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
+.confirm {
+  display: none;
+}
+
+.confirm > div:first-of-type {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+}
+
+.confirm > div:last-of-type {
+  padding: 10px 20px;
+  background: white;
+  position: fixed;
+  width: auto;
+  height: auto;
+  left: 50%;
+  top: 50%;
+  vertical-align: middle;
+  transform: translate(-50%, -50%);
+  border-radius: 25px;
+  border: 1px solid #333;
+  z-index: 3;
+}
+
+.confirm > div:last-of-type div:first-of-type {
+  min-width: 150px;
+  padding: 10px;
+}
+
+.confirm > div:last-of-type div:last-of-type {
+  text-align: center;
+}
+
+.confirm-choices {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 40px 10px;
+}
+
+#confirm-yes, #confirm-no {
+  border-radius: 25px;
+  width: 70px;
+  border: 1px solid #333;
+}
+
 .instructions {
   width: 100%;
   display: flex;
