--- a/voting/style.css
+++ b/voting/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: 'Tabular', sans-serif;
-  font-size: 16px;
+  font-size: 17px;
   box-sizing: border-box;
 }
 
@@ -48,7 +48,7 @@ h1 {
 .outline {
   border: 1px solid rgb(127, 197, 255);
   border-radius: 25px;
-  padding: 6px 12px;
+  padding: 5px 12px 6px;
 }
 
 .voting-area {
@@ -58,6 +58,19 @@ h1 {
   align-items: center;
   margin: 20px auto 100px;
   gap: 20px;
+}
+
+.settings-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 0 100px;
+  width: auto;
+  padding: 20px;
+  background: linear-gradient(333deg, rgba(237,237,237,1) 51%, rgb(255, 193, 127) 100%);
+  border: 1px solid rgb(255, 193, 127);
+  border-radius: 25px;
 }
 
 .option-area {
@@ -118,6 +131,55 @@ h1 {
   margin: 0 0 10px;
 }
 
+.settings-card {
+  background-color: rgb(230, 230, 230);
+  width: auto;
+  height: auto;
+  align-content: left;
+  justify-content: flex-start;
+}
+
+.settings {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(234, 234, 234);
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.setting {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 0;
+  background-color: rgb(234, 234, 234);
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.setting-name {
+  margin: 0;
+  text-align: left;
+  align-self: center;
+  width: 200px;
+  flex-wrap: wrap;
+}
+
+#vote-accrual-rate-input, #active-streak-threshold-input, #active-streak-accrual-rate-input {
+  background: rgb(250, 250, 250);
+  height: 44px;
+  width: 92px;
+  margin: 0;
+  font-size: 20px;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  text-align: center;
+  align-self: center;
+}
+
 .option-card {
   background-color: rgb(230, 230, 230);
   height: auto;
@@ -126,7 +188,7 @@ h1 {
 .stats-card {
   background-color: rgb(230, 230, 230);
   width: 320px;
-  height: 360px;
+  height: auto;
   align-content: left;
   justify-content: flex-start;
 }
@@ -149,7 +211,7 @@ h1 {
 .history-card {
   background-color: rgb(230, 230, 230);
   width: 320px;
-  height: 360px;
+  height: 372.5px;
   justify-content: flex-start;
 }
 
@@ -179,35 +241,62 @@ h1 {
   margin: 0 0 20px;
 }
 
-.card input {
+input {
   background: rgb(250, 250, 250);
-  height: 60px;
-  width: 92px;
+  height: 40px;
+  width: 87.2px;
   font-size: 20px;
   border: 1px solid #000000;
   border-radius: 10px;
   text-align: center;
   margin: 13px auto 10px;
+  outline: none;
+}
+
+input::placeholder {
+  color: #000000;
+}
+
+input:focus::placeholder {
+  color: transparent;
+}
+
+input[disabled] {
+  color: #a0a0a0;
+  background-color: rgb(234, 234, 234);
+  border: 1px solid #a0a0a0;
 }
 
 .number-controls {
+  display: flex;
+  flex-direction: row;
   font-size: 0;
   margin-bottom: 23px;
 }
 
 .number-control {
+  display: flex;
   border: 1px solid #000000;
   background: rgb(250, 250, 250);
-  display: inline-block;
-  width: 46px;
-  height: 35px;
+  width: 43.6px;
+  height: 32px;
   font-size: 24px;
   font-weight: 400;
+  line-height: 26px;
+  justify-content: center;
+  vertical-align: middle;
   color: #000000;
   cursor: pointer;
 }
 
-.number-controls button[disabled] {
+.number-control:hover {
+  transition-duration: 0.3s;
+  background-color: rgb(236, 236, 236);
+}
+
+.number-control[disabled] {
+  border: 1px solid #a0a0a0;
+  background-color: rgb(234, 234, 234);
   color: #a0a0a0;
   cursor: default;
 }
@@ -220,6 +309,9 @@ h1 {
 .right {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.no-left-border {
   border-left-width: 0px;
 }
 
@@ -229,14 +321,21 @@ h1 {
 }
 
 .button {
-  width: 92px;
+  width: auto;
+  height: 44px;
   cursor: pointer;
   border-radius: 10px;
   background-color: rgb(250, 250, 250);
 }
 
+.button:hover {
+  transition-duration: 0.3s;
+  background-color: rgb(236, 236, 236);
+}
+
 .button[disabled] {
-  background-color: #d2d2d2;
+  transition-duration: 0.3s;
+  background-color: rgb(234, 234, 234);
   color: #a0a0a0;
   cursor: default;
 }
@@ -246,37 +345,51 @@ h1 {
 }
 
 #next-round {
-  width: 150px;
-  padding: 10px 20px;
-  font-size: 18px;
+  width: auto;
+  padding: 10px 12px;
+  font-size: 17px;
   font-weight: 400;
   margin: 10px auto 30px;
   border: 1px solid #000000;
 }
 
+@keyframes glowing {
+  0% { box-shadow: 0 0 -10px rgb(148, 127, 255); }
+  40% { box-shadow: 0 0 20px rgb(148, 127, 255); }
+  60% { box-shadow: 0 0 20px rgb(148, 127, 255); }
+  100% { box-shadow: 0 0 -10px rgb(148, 127, 255);}
+}
+
+.button-glow {
+  animation: glowing 2700ms infinite;  
+}
+
 #abstain {
-  width: 118px;
+  width: auto;
   padding: 10px 20px;
-  font-size: 18px;
-  font-weight: 400;
   margin: 20px auto 0;
-  border: 1px solid #000000;
 }
 
 #vote-button-a.button[disabled], #vote-button-b.button[disabled], #next-round.button[disabled], #abstain.button[disabled] {
   border: 1px solid #a0a0a0;
 }
 
-#vote-button-a, #vote-button-b {
+#vote-button-a, #vote-button-b, #abstain, #rate-set-button, #threshold-set-button, #streak-rate-set-button {
   padding: 10px 12px;
   border: none;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 400;
   border: 1px solid #000000;
+  align-self: center;
+}
+
+#rate-set-button, #threshold-set-button, #streak-rate-set-button {
+  width: 77px;
 }
 
 input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  appearance: none;
 }
 
 .confirm {
@@ -310,7 +423,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 .confirm > div:last-of-type div:first-of-type {
   min-width: 150px;
-  padding: 10px;
+  padding: 10px 10px 20px;
 }
 
 .confirm > div:last-of-type div:last-of-type {
@@ -325,10 +438,19 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 #confirm-yes, #confirm-no {
+  font-size: 17px;
   padding: 4px;
   border-radius: 10px;
   width: 70px;
+  height: 44px;
   border: 1px solid #333;
+  background: rgb(250, 250, 250);
+}
+
+#confirm-yes:hover, #confirm-no:hover {
+  cursor: pointer;
+  transition-duration: 0.3s;
+  background-color: rgb(236, 236, 236);
 }
 
 .instructions {
