--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -7,13 +7,11 @@
 /**
     Global styles.
     **/
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 html {
   min-height: 100%;
   /*background: rgb(63, 201, 255);*/
@@ -27,7 +25,6 @@ html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
 }
-
 .emphasis {
   font-style: italic;
 }
@@ -35,7 +32,6 @@ html {
 /**
     Animations & associated classes.
     **/
-
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -44,12 +40,10 @@ html {
     opacity: 1;
   }
 }
-
 .fade-in {
   animation: fadeIn 1s;
   opacity: 1;
 }
-
 @keyframes in {
   0% {
     -webkit-transform: rotate(0deg);
@@ -58,7 +52,6 @@ html {
     -webkit-transform: rotate(360deg);
   }
 }
-
 @keyframes out {
   0% {
     -webkit-transform: rotate(360deg);
@@ -67,7 +60,6 @@ html {
     -webkit-transform: rotate(0deg);
   }
 }
-
 @keyframes click {
   0% {
     -webkit-transform: scale(1);
@@ -76,7 +68,6 @@ html {
     -webkit-transform: scale(0.964);
   }
 }
-
 @keyframes hover {
   0% {
     -webkit-transform: scale(1.03);
@@ -89,7 +80,6 @@ html {
 /**
     Header & Drip button.
     **/
-
 header {
   display: flex;
   justify-content: center;
@@ -97,13 +87,11 @@ header {
   margin-top: calc(40px + 2vw);
   margin-bottom: calc(15px + 2vw);
 }
-
 h1 {
   font-weight: 400;
   font-size: calc(1.9rem + 1vw);
   margin: 20px calc(10px + 2vw);
 }
-
 #drip-button {
   background: rgb(184, 252, 74);
   color: #000;
@@ -121,42 +109,142 @@ h1 {
   margin: 20px;
   box-shadow: 0px 4px 15px rgba(67, 67, 67, 0.25);
 }
-
 #drip-button:hover {
   cursor: pointer;
   -webkit-animation: hover 0.36s;
   animation: hover 0.36s;
 }
-
 #drip-button:active {
   -webkit-animation: click 0.18s ease-in-out;
   animation: click 0.18s ease-in-out;
 }
-
 .index {
   text-decoration: none;
+}
+.chapter-selection {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding-top: 30px;
+  gap: 10px
+}
+.select-text {
+  align-self: center;
+  letter-spacing: 0.32px;
+}
+.input-area {
+  display: flex;
+  gap: 4px
+}
+.selection-area {
+  display: flex;
+  align-self: center;
+  gap: 10px;
+}
+input {
+  background: #fafafa;
+  height: 38px;
+  width: 60px;
+  font-size: 1rem;
+  border: 1px solid #000;
+  border-radius: 4px;
+  text-align: center;
+  outline: 0
+}
+input::placeholder {
+  color: #000
+}
+input:focus::placeholder {
+  color: transparent
+}
+input[disabled] {
+  color: #a0a0a0;
+  background-color: #eaeaea;
+  border: 1px solid #a0a0a0
+}
+input[disabled]:hover,
+.number-control[disabled]:hover {
+  cursor: not-allowed;
+}
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none
+}
+.number-controls {
+  display: flex;
+  position: relative;
+  height: 38px;
+  margin: 0 18px 0 0;
+}
+.number-controls .plus,
+.number-controls .minus {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+.number-controls .plus {
+  top: 0;
+  left: 0;
+  line-height: 17px;
+  font-size: 18px;
+}
+.number-controls .minus {
+  bottom: 0;
+  left: 0;
+  line-height: 4px;
+  font-size: 20px;
+}
+.button {
+  width: auto;
+  height: 38px;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: #fafafa;
+  padding: 4px 10px;
+  color: #000;
+  font-size: 1rem;
+  letter-spacing: 0.32px;
+  border: 1px solid #000;
+  align-self: center;
+}
+.button:hover {
+  transition-duration: .3s;
+  background-color: #ececec
+}
+.button[disabled] {
+  transition-duration: .3s;
+  background-color: #eaeaea;
+  color: #a0a0a0;
+  border: 1px solid #a0a0a0;
+  cursor: default
 }
 
 /**
     Message container.
     **/
-
 @media (min-width: 0px) {
   #display,
   .sources {
     font-size: clamp(1rem, calc(1rem + 1vw), 1.5rem);
     margin: 30px 10%;
   }
+  .chapter-selection {
+    flex-direction: column;
+  }
 }
-
 @media (min-width: 1150px) {
   #display,
   .sources {
     font-size: clamp(1.5rem, calc(1.5rem + 1vw), 1.8rem);
     margin: 30px 14%;
   }
+  .chapter-selection {
+    flex-direction: row;
+  }
 }
-
 #display {
   line-height: 1.3;
   letter-spacing: 0.22px;
@@ -165,14 +253,12 @@ h1 {
   padding: 5% 6%;
   background: rgb(184, 252, 74);
 }
-
 #seperator {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 40px 0px;
 }
-
 .sources {
   line-height: 1.3;
   letter-spacing: 0.22px;
@@ -182,11 +268,9 @@ h1 {
   color: rgb(0, 0, 0);
   background: rgb(255, 255, 255);
 }
-
 p.sources a {
   color: rgb(0, 0, 0);
 }
-
 p.sources a:hover {
   font-style: italic;
 }
@@ -194,19 +278,16 @@ p.sources a:hover {
 /**
     Footer.
     **/
-
 footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
 #links {
   display: flex;
   flex-direction: row;
 }
-
 footer img {
   margin: calc(40px + 2vw) auto;
   width: calc(80px + 1vw);
@@ -214,12 +295,11 @@ footer img {
   -webkit-animation: in 0.5s;
   animation: in 0.5s;
 }
-
 footer img:hover {
   -webkit-animation: out 0.5s;
   animation: out 0.5s;
+  cursor: pointer;
 }
-
 .footer-link {
   text-decoration: none;
   color: #000;
@@ -229,11 +309,9 @@ footer img:hover {
   position: relative;
   padding-bottom: 2px;
 }
-
 .footer-link:hover {
   font-style: italic;
 }
-
 .footer-link:hover::after {
   content: "";
   position: absolute;
