--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -126,7 +126,7 @@ h1 {
   justify-content: center;
   margin: 0;
   padding-top: 30px;
-  gap: 10px
+  gap: 18px
 }
 .select-text {
   align-self: center;
@@ -139,12 +139,12 @@ h1 {
 .selection-area {
   display: flex;
   align-self: center;
-  gap: 10px;
+  gap: 20px;
 }
 input {
   background: #fafafa;
   height: 38px;
-  width: 60px;
+  width: 50px;
   font-size: 1rem;
   border: 1px solid #000;
   border-radius: 4px;
@@ -179,23 +179,52 @@ input[type=number]::-webkit-inner-spin-button {
 .number-controls .plus,
 .number-controls .minus {
   position: absolute;
-  width: 18px;
-  height: 18px;
+  left: 0;
+  width: 0; 
+  height: 0;
   padding: 0;
   margin: 0;
-  text-align: center;
+  background: none;
+  border-radius: 0;
 }
-.number-controls .plus {
+.number-controls .plus:hover,
+.number-controls .minus:hover {
+  background-color: transparent;
+}
+.number-controls .plus { 
   top: 0;
-  left: 0;
-  line-height: 17px;
-  font-size: 18px;
+  margin-top: -6px;
+  border-top: 10px solid transparent;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid black;
 }
 .number-controls .minus {
   bottom: 0;
-  left: 0;
-  line-height: 4px;
-  font-size: 20px;
+  margin-bottom: -6px;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #000;
+}
+.number-control[disabled] {
+  transition-duration: .3s;
+}
+.number-controls .plus[disabled] {
+  border-top: 10px solid transparent;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #a0a0a0;
+  cursor: not-allowed;
+  background-color: transparent;
+}
+.number-controls .minus[disabled] {
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #a0a0a0;
+  cursor: not-allowed;
+  background-color: transparent;
 }
 .button {
   width: auto;
@@ -219,7 +248,6 @@ input[type=number]::-webkit-inner-spin-button {
   background-color: #eaeaea;
   color: #a0a0a0;
   border: 1px solid #a0a0a0;
-  cursor: default
 }
 
 /**
@@ -304,7 +332,7 @@ footer img:hover {
   text-decoration: none;
   color: #000;
   font-size: 1rem;
-  letter-spacing: 1px;
+  letter-spacing: 0.32px;
   margin: 0 12px calc(40px + 2vw);
   position: relative;
   padding-bottom: 2px;
