--- a/mixed-messages/style.css
+++ b/mixed-messages/style.css
@@ -10,11 +10,46 @@ html {
   font-family: Arial,Helvetica,sans-serif;
   font-size: 24px
 }
-.emphasis,
-.footer-link:hover,
-p.sources a:hover {
-  font-style: italic
+
+/**
+    Media queries
+**/
+@media (min-width:0px) {
+  #display,
+  .sources {
+    font-size: clamp(1rem, calc(1rem + 1vw), 1.5rem);
+    margin: 30px 10% 60px
+  }
+  .chapter-selection {
+    margin: 0 10% 80px
+  }
+  .line-one,
+  .line-two,
+  #links,
+  .selection-area {
+    flex-direction: column
+  }
 }
+@media (min-width:1024px) {
+  #display,
+  .sources {
+    font-size: clamp(1.5rem, calc(1.5rem + 1vw), 1.8rem);
+    margin: 30px 14% 60px
+  }
+  .chapter-selection {
+    margin: 0 14% 80px
+  }
+  .line-one,
+  .line-two,
+  #links,
+  .selection-area {
+    flex-direction: row
+  }
+}
+
+/**
+    Animations
+**/
 @keyframes fadeIn {
   from {
     opacity: 0
@@ -22,10 +57,6 @@ p.sources a:hover {
   to {
     opacity: 1
   }
-}
-.fade-in {
-  animation: 1s fadeIn;
-  opacity: 1
 }
 @keyframes in {
   0% {
@@ -59,6 +90,11 @@ p.sources a:hover {
     -webkit-transform: scale(1)
   }
 }
+.fade-in {
+  animation: 1s fadeIn;
+  opacity: 1
+}
+
 header {
   display: flex;
   justify-content: center;
@@ -71,6 +107,10 @@ h1 {
   font-size: calc(1.9rem + 1vw);
   margin: 20px calc(10px + 2vw)
 }
+
+/**
+    Buttons/inputs
+**/
 #drip-button {
   background: #FFF1E0;
   color: #000;
@@ -86,7 +126,7 @@ h1 {
   padding: calc(70px + 1vw);
   letter-spacing: 1px;
   margin: 20px;
-  box-shadow: 0 4px 15px rgba(67,67,67,.25)
+  box-shadow: 0 4px 15px rgba(67,67,67,.16)
 }
 #drip-button:hover {
   cursor: pointer;
@@ -99,30 +139,6 @@ h1 {
 }
 .index {
   text-decoration: none
-}
-.chapter-selection {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  border-radius: 10px;
-  background: #FFF1E0;
-  gap: 16px
-}
-.select-text {
-  align-self: center;
-  letter-spacing: .32px
-}
-#bullet {
-  padding: 0 24px;
-}
-.input-area {
-  display: flex;
-  gap: 4px
-}
-.selection-area {
-  display: flex;
-  align-self: center;
-  gap: 19px
 }
 input {
   background: #fff6eb;
@@ -215,40 +231,9 @@ input[type=number]::-webkit-inner-spin-button {
   transition-duration: .3s;
   background-color: #F2DFCE
 }
-.button[disabled] {
-  transition-duration: .3s;
-  background-color: #eaeaea;
-  color: #a0a0a0;
-  border: 1px solid #a0a0a0
-}
-@media (min-width:0px) {
-  #display,
-  .sources {
-    font-size: clamp(1rem, calc(1rem + 1vw), 1.5rem);
-    margin: 30px 10% 60px
-  }
-  .chapter-selection {
-    margin: 0 10% 60px;
-    flex-direction: column
-  }
-  #links {
-    flex-direction: column
-  }
-}
-@media (min-width:1150px) {
-  #display,
-  .sources {
-    font-size: clamp(1.5rem, calc(1.5rem + 1vw), 1.8rem);
-    margin: 30px 14% 60px
-  }
-  .chapter-selection {
-    margin: 0 14% 60px;
-    flex-direction: row
-  }
-  #links {
-    flex-direction: row
-  }
-}
+/**
+    Misc body
+**/
 #display {
   line-height: 1.3;
   letter-spacing: .22px;
@@ -267,10 +252,73 @@ input[type=number]::-webkit-inner-spin-button {
   justify-content: center;
   margin: 40px 0
 }
+.chapter-selection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5% 6%;
+  border-radius: 10px;
+  background: #FFF1E0;
+  gap: 40px
+}
+.line-one,
+.line-two {
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid #e0ccbc;
+  border-radius: 10px;
+  padding: 20px
+}
+.line-one {
+  justify-content: space-between;
+  gap: 16px
+}
+.line-two {
+  justify-content: center;
+  border: 1px solid #e0ccbc;
+  border-radius: 10px;
+  padding: 20px;
+  gap: 10px
+}
+.select-text {
+  align-self: center;
+  letter-spacing: .32px
+}
+#bullet {
+  padding: 0 34px;
+}
+.input-area {
+  display: flex;
+  gap: 4px
+}
+.selection-area {
+  display: flex;
+  align-self: center;
+  gap: 19px
+}
+.selection-right {
+  display: flex;
+  align-self: center;
+  gap: 19px
+}
+#unread-chapters {
+  display: flex;
+  align-self: center;
+  flex-wrap: wrap;
+}
+.chapter-numbers {
+  justify-self:center;
+  align-self: center
+}
 .emoji {
-  filter: grayscale(100%);
-  -webkit-filter: grayscale(100%);
-  -moz-filter: grayscale(100%);
+  filter: grayscale(100%) sepia(70%);
+  -webkit-filter: grayscale(100%) sepia(70%);
+  -moz-filter: grayscale(100%) sepia(70%);
+}
+.emphasis,
+.footer-link:hover,
+p.sources a:hover {
+  font-style: italic
 }
 .sources {
   line-height: 1.3;
